@@ -1,3 +1,8 @@
+2008-04-28  Sergey Udaltsov <svu@gnome.org>
+
+	* gswitchit-applet.c: a bit of code cleanup, thanks to Yuriy,
+	http://bugzilla.gnome.org/show_bug.cgi?id=529760
+
 2008-04-25  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gswitchit-applet.c: C89 compilation fix from Jens Granseuer (see
